Revert "fix(ADA-1194): Added styling only when X would overlap (#90)"
This reverts commit 937bb9035a463edab68014ac3ec567f863f198cc.

--- a/src/components/moderation/moderation.scss
+++ b/src/components/moderation/moderation.scss
@@ -11,8 +11,7 @@
   color: white;
 
   &.extrasmall,
-  &.small,
-  &.medium {
+  &.small {
     .main-wrapper .title {
       margin-bottom: 12px;
       font-size: 20px;
@@ -39,6 +38,7 @@
       font-weight: 700;
       text-align: left;
       line-height: 32px;
+      padding-right: 44px;
     }
     .selectTitle {
       font-size: 14px;
@@ -46,6 +46,7 @@
       font-weight: 700;
       text-align: left;
       margin-top: 24px;
+      padding-right: 44px;
     }
     .subtitle {
       margin-top: 16px;
